--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -273,3 +273,11 @@ a {
         padding: 5px 10px;
         }
 }
+
+.no-left-margin {
+  margin-left: 0px;
+}
+
+.display-first {
+  display: block;
+}
