--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -9,6 +9,7 @@
     <meta name="copyright" content="&copy; {{ site.author.name }} 2015">
     <meta name="description" content="My personal website, where I list all of my main projects and occasionally blog.">
 
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:">
     <meta name="google-site-verification" content="8QqLkBKn1EYwbbAcD3TzbJpc8Zgni2mRuEhnlUeoGVg" />
 
     <meta property="og:description" content="My personal website, where I list all of my main projects and occasionally blog." />
@@ -41,7 +42,7 @@
 
     <!-- Le styles -->
     <link href="{{ HOME_PATH }}assets/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href="{{ HOME_PATH }}assets/css/custom.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="favicon.ico">
@@ -57,7 +58,7 @@
     <div class="wrapper">
       <div class="container">
         <h1>Richard Littauer</h1>
-        <h2 class="quotes" style="display:block">Developer</h2>
+        <h2 class="quotes display-first">Developer</h2>
         <h2 class="quotes">Nomad</h2>
         <h2 class="quotes">Linguist</h2>
         <h2 class="quotes">Poet</h2>
@@ -95,7 +96,7 @@
           {% for project in projects limit:16 %}
             {% assign loopindex = forloop.index | modulo: 3 %}
             {% if loopindex == 1 %}
-              <div class="col-xs-6 col-sm-4 col-md-3" style="margin-left:0px;">
+              <div class="col-xs-6 col-sm-4 col-md-3 no-left-margin">
             {% else %}
               <div class="col-xs-6 col-sm-4 col-md-3">
             {% endif %}
@@ -187,7 +188,7 @@
           {% for project in projects offset:16 %}
             {% assign loopindex = forloop.index | modulo: 3 %}
             {% if loopindex == 1 %}
-              <div class="col-xs-6 col-sm-4 col-md-3" style="margin-left:0px;">
+              <div class="col-xs-6 col-sm-4 col-md-3 no-left-margin" >
             {% else %}
               <div class="col-xs-6 col-sm-4 col-md-3">
             {% endif %}
@@ -220,7 +221,7 @@
          <p>Send me a letter: <a href="mailto:richard@burntfen.com">richard@burntfen.com</a></p>
          <p><a href='http://webring.dinhe.net/prev/burntfen.com'>Previous</a> (<a href="http://webring.dinhe.net/">Join the retronaut webring.</a>) <a href='http://webring.dinhe.net/next/burntfen.com'>Next</a>
           </p>
-          <p>{{ site.author.name }} &copy; <script type="text/javascript">document.write(new Date().getFullYear())</script>.
+          <p>{{ site.author.name }} &copy; <span class="year"></span>.
             <a href="https://github.com/RichardLitt/richardlitt.github.com">Source</a>.
           </p>
         </footer>
@@ -233,30 +234,11 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
     <script src="assets/js/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-
-    <script type="text/javascript">
-      (function() {
-          var quotes = $(".quotes")
-          var quoteIndex = -1
-          var duration = 1000
-
-          function showNextQuote() {
-              ++quoteIndex;
-              quotes.eq(quoteIndex % quotes.length)
-                  .fadeIn(duration)
-                  .delay(duration)
-                  .fadeOut(duration, showNextQuote)
-          }
-
-          showNextQuote()
-      })()
-    </script>
+    <script src="assets/js/quotes.js">
 
     {% include JB/analytics %}
-
 
   </body>
 </html>
