--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -6,12 +6,14 @@
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="{{ site.author.name }}">
-    <meta name="copyright" content="&copy; {{ site.author.name }} 2015">
+    <meta name="copyright" content="&copy; {{ site.author.name }} {{ site.time | date: '%Y' }}">
     <meta name="description" content="My personal website, where I list all of my main projects and occasionally blog.">
 
+    <!-- Security -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:">
     <meta name="google-site-verification" content="8QqLkBKn1EYwbbAcD3TzbJpc8Zgni2mRuEhnlUeoGVg" />
 
+    <!-- Open Graph -->
     <meta property="og:description" content="My personal website, where I list all of my main projects and occasionally blog." />
     <meta property="og:url" content="http://burntfen.com/" />
     <meta property="og:site_name" content="Richard Littauer" />
@@ -221,7 +223,7 @@
          <p>Send me a letter: <a href="mailto:richard@burntfen.com">richard@burntfen.com</a></p>
          <p><a href='http://webring.dinhe.net/prev/burntfen.com'>Previous</a> (<a href="http://webring.dinhe.net/">Join the retronaut webring.</a>) <a href='http://webring.dinhe.net/next/burntfen.com'>Next</a>
           </p>
-          <p>{{ site.author.name }} &copy; <span class="year"></span>.
+          <p>{{ site.author.name }} &copy; {{ site.time | date: '%Y' }}.
             <a href="https://github.com/RichardLitt/richardlitt.github.com">Source</a>.
           </p>
         </footer>
