Updated favicon asset path

--- a/_includes/themes/minimalber/default.html
+++ b/_includes/themes/minimalber/default.html
@@ -46,16 +46,14 @@
     <link href="{{ HOME_PATH }}assets/css/custom.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-    <link rel="shortcut icon" href="favicon.ico">
 
     <!-- Le fav and touch icons -->
+    <link rel="shortcut icon" href="{{ HOME_PATH }}favicon.ico">
     <link rel="apple-touch-icon" href="{{ HOME_PATH }}images/touch-icon-iphone.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="{{ HOME_PATH }}images/touch-icon-ipad.png" />
     <link rel="apple-touch-icon" sizes="114x114" href="{{ HOME_PATH }}images/touch-icon-iphone-retina.png" />
     <link rel="apple-touch-icon" sizes="144x144" href="{{ HOME_PATH }}images/touch-icon-ipad-retina.png" />
-
   </head>
-
   <body>
 
     <div class="navbar navbar-static-top">
