--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -47,9 +47,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href="{{ HOME_PATH }}assets/css/custom.css" rel="stylesheet">
 
-    <link rel="shortcut icon" href="favicon.ico">
-
     <!-- Le fav and touch icons -->
+    <link rel="shortcut icon" href="{{ HOME_PATH }}favicon.ico">
     <link rel="apple-touch-icon" href="{{ HOME_PATH }}images/touch-icon-iphone.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="{{ HOME_PATH }}images/touch-icon-ipad.png" />
     <link rel="apple-touch-icon" sizes="114x114" href="{{ HOME_PATH }}images/touch-icon-iphone-retina.png" />
