--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -478,7 +478,7 @@ form.tlemailform {
 }
 
 .litt-list {
-  margin-top: 30px;
+  margin: 30px 0px 60px;
   line-height: 30px;
   font-size: 20px;
   ul {
