Move projects images folder

--- a/_includes/themes/minimalber/project.html
+++ b/_includes/themes/minimalber/project.html
@@ -6,7 +6,7 @@
   <div class="row-fluid">
     <div class="col-sm-4">
       <a href="{{ page.outbound }}">
-        <img class="project-image" src="../../assets/img/projects/{{ page.picture }}" />
+        <img class="project-image" src="../../assets/img/project/{{ page.picture }}" />
       </a>
     </div>
     <div class="col-sm-8">
