--- a/_includes/themes/minimalber/default.html
+++ b/_includes/themes/minimalber/default.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Burnt Fen | {{ page.title }}</title>
-    {% if page.description %}
-    <meta name="description" content="{{ page.description }}">
-    {% else %}
-    <meta name="description" content="{{ site.tagline }}">
-    {% endif %}
+    {% if page.description %}<meta name="description" content="{{ page.description }}">{% else %}<meta name="description" content="{{ site.tagline }}">{% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="{{ site.author.name }}">
     <meta name="copyright" content="&copy; {{ site.author.name }} {{ site.time | date: '%Y' }}">
@@ -16,30 +12,23 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:">
 
     <!-- Open Graph -->
-    {% if page.description %}
-    <meta property="og:description" content="{{ page.description }}" />
-    {% else %}
-    <meta property="og:description" content="{{ site.tagline }}" />
-    {% endif %}
+    {% if page.description %}<meta property="og:description" content="{{ page.description }}" />{% else %}<meta property="og:description" content="{{ site.tagline }}" />{% endif %}
     <meta property="og:url" content="https://burntfen.com/" />
     <meta property="og:site_name" content="Richard Littauer" />
     <meta property="og:title" content="Richard Littauer" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://burntfen.com/assets/img/avatar.png" />
+    {% if page.picture %}<meta property="og:image" content="{{ site.url }}/assets/img/{% if page.layout %}{{ page.layout }}{% endif %}/{{ page.picture }}">{% else %}<meta property="og:image" content="https://burntfen.com/assets/img/avatar.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="510" />
     <meta property="og:image:height" content="515" />
+    {% endif %}
 
     <!-- Twitter: card tags -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@richlitt" />
     <meta name="twitter:title" content="Richard Littauer">
-    {% if page.description %}
-    <meta property="twitter:description" content="{{ page.description }}" />
-    {% else %}
-    <meta property="twitter:description" content="{{ site.tagline }}" />
-    {% endif %}
-    <meta name="twitter:image" content="https://burntfen.com/assets/img/avatar.png">
+    {% if page.description %}<meta property="twitter:description" content="{{ page.description }}" />{% else %}<meta property="twitter:description" content="{{ site.tagline }}" />{% endif %}
+    {% if page.picture %}<meta name="twitter:image" content="{{ site.url }}/assets/img/{% if page.layout %}{{ page.layout }}{% endif %}/{{ page.picture }}">{% else %}<meta name="twitter:image" content="https://burntfen.com/assets/img/avatar.png">{% endif %}
 
     <!-- Open Source Protocol -->
     <link rel="profile" href="http://osprotocol.com" />
