--- a/_includes/themes/minimalber/default.html
+++ b/_includes/themes/minimalber/default.html
@@ -17,7 +17,7 @@
     <meta property="og:site_name" content="Richard Littauer" />
     <meta property="og:title" content="Richard Littauer" />
     <meta property="og:type" content="website" />
-    {% if page.picture %}<meta property="og:image" content="{{ site.url }}/assets/img/{% if page.layout %}{{ page.layout }}{% endif %}/{{ page.picture }}">{% else %}<meta property="og:image" content="https://burntfen.com/assets/img/avatar.png" />
+    {% if page.picture %}<meta property="og:image" content="https://burntfen.com/assets/img/{% if page.layout %}{{ page.layout }}{% endif %}/{{ page.picture }}">{% else %}<meta property="og:image" content="https://burntfen.com/assets/img/avatar.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="510" />
     <meta property="og:image:height" content="515" />
@@ -28,7 +28,7 @@
     <meta name="twitter:site" content="@richlitt" />
     <meta name="twitter:title" content="Richard Littauer">
     {% if page.description %}<meta property="twitter:description" content="{{ page.description }}" />{% else %}<meta property="twitter:description" content="{{ site.tagline }}" />{% endif %}
-    {% if page.picture %}<meta name="twitter:image" content="{{ site.url }}/assets/img/{% if page.layout %}{{ page.layout }}{% endif %}/{{ page.picture }}">{% else %}<meta name="twitter:image" content="https://burntfen.com/assets/img/avatar.png">{% endif %}
+    {% if page.picture %}<meta name="twitter:image" content="https://burntfen.com/assets/img/{% if page.layout %}{{ page.layout }}{% endif %}/{{ page.picture }}">{% else %}<meta name="twitter:image" content="https://burntfen.com/assets/img/avatar.png">{% endif %}
 
     <!-- Open Source Protocol -->
     <link rel="profile" href="http://osprotocol.com" />
