--- a/_includes/themes/minimalber/project.html
+++ b/_includes/themes/minimalber/project.html
@@ -13,6 +13,8 @@
       <h4>{{ page.stub}}</h4>
       <p class="role"><i>{{ page.role }}</i> {{ page.status }}</p>
       {{ content }}
+      
+      {% if page.outbound %}<p><a href="{{ page.outbound }}">Check it out.</a></p>{% endif %}
     </div>
     <hr>
   </div>
