--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -15,7 +15,7 @@
 
     <!-- Open Graph -->
     <meta property="og:description" content="{{ page.tagline }}" />
-    <meta property="og:url" content="https://burntfen.com/" />
+    <meta property="og:url" content="{{site.url}}{{page.url}}" />
     <meta property="og:site_name" content="Richard Littauer" />
     <meta property="og:title" content="Richard Littauer" />
     <meta property="og:type" content="website" />
