--- a/_includes/themes/minimalber/review.html
+++ b/_includes/themes/minimalber/review.html
@@ -3,7 +3,7 @@
     <div class="col-sm-12 review-page-header">
       <h1 class="rp-title">{{ page.title }}</h1>
       <p class="rp-author">By {{ page.author }}</p> {% if page.date != null %}
-      <p class="rp-date">Reviewed {{ page.date | date: "%b %-d, %Y"}} on <a href="../">The Litt Review</a>.</p>
+      <p class="rp-date">Reviewed {{ page.date | date: "%b %-d, %Y"}} on <a href="../../">The Litt Review</a>.</p>
       {% endif %}
     </div>
   </div>
