--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -508,6 +508,7 @@ form.tlemailform {
   font-size: 20px;
   line-height: 34px;
   margin: 50px auto;
+  text-indent: 40px;
   a {
     font-weight: 400;
     text-decoration: underline;
