--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -1,6 +1,9 @@
 $leftPadding: 15px;
 
 #index {
+  .project {
+    min-height: 400px;
+  }
   .wrapper {
     background-color: #FFFFFF;
   }
@@ -101,7 +104,7 @@ $leftPadding: 15px;
     }
     p {
       color: #666;
-      margin: 0 0 60px 0;
+      margin: 0 0 30px 0;
       .status {
         font-style: italic;
         color: #888;
@@ -179,6 +182,9 @@ $leftPadding: 15px;
         height: 80px;
         margin-bottom: 0px;
       }
+    }
+    .project {
+      min-height:350px;
     }
   }
 }
