--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -9,6 +9,8 @@
     <meta name="copyright" content="&copy; {{ site.author.name }} {{ site.time | date: '%Y' }}">
     <meta name="description" content="{{ page.tagline }}">
 
+    {% feed_meta %}
+
     <!-- Security -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:">
     <meta name="google-site-verification" content="8QqLkBKn1EYwbbAcD3TzbJpc8Zgni2mRuEhnlUeoGVg" />
