Made an art page for easy reference

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -250,3 +250,9 @@ a {
 .tag_box ul li {display: inline;}
 
 .published { margin-bottom: 30px; }
+
+
+img.art {
+  // Used on the art.md page only
+  margin: 100px 0px;
+}
