--- a/_sass/_litt-review.scss
+++ b/_sass/_litt-review.scss
@@ -91,6 +91,7 @@
   .project-image {
     float: right;
     width: 40%;
+    max-width: 100%;
     margin-left: 30px;
     margin-bottom: 30px;
   }
