--- a/_includes/themes/minimalber/default.html
+++ b/_includes/themes/minimalber/default.html
@@ -82,7 +82,7 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{ HOME_PATH }}assets/js/jquery.js"></script>
+    <script src="{{ HOME_PATH }}assets/js/jquery.min.js"></script>
     <script src="{{ HOME_PATH }}assets/js/bootstrap.min.js"></script>
     {% include JB/analytics %}
   </body>
