--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -64,8 +64,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{{ HOME_PATH }}assets/js/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-    <script src="{{ HOME_PATH }}assets/js/quotes.js"></script>
-    <script src="{{ HOME_PATH }}assets/js/classie.js"></script>
+    <script src="{{ HOME_PATH }}assets/js/quotes.min.js"></script>
+    <script src="{{ HOME_PATH }}assets/js/classie.min.js"></script>
 
     {% include JB/analytics %}
 
