--- a/_includes/themes/minimalber/default.html
+++ b/_includes/themes/minimalber/default.html
@@ -42,8 +42,8 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="{{ HOME_PATH }}assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ HOME_PATH }}assets/css/custom.css" rel="stylesheet">
+    <link href="{{ HOME_PATH }}assets/css/bootstrap.min.css" rel="preload" as="style">
+    <link href="{{ HOME_PATH }}assets/css/custom.css" rel="preload" as="style">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 
