fix: load css locally
closes #82

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -4,6 +4,6 @@
 @import "_custom";
 @import "_project-page";
 @import "_madoka";
+@import "_mailchimp";
 @import "_litt-review";
 @import "_index";
-
