--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -127,19 +127,20 @@ $leftPadding: 15px;
     background-color:#111;
     color:#FFF;
 
-    .available {
-      color:#FFF;
-      text-align:center;
-      margin: 50px auto;
-      font-size:25px;
-      line-height:30px;
-      &.available-sm {
-        margin-bottom: 100px;
-      }
-    }
+    // .available {
+    //   color:#FFF;
+    //   text-align:center;
+    //   margin: 50px auto;
+    //   font-size:25px;
+    //   line-height:30px;
+    //   &.available-sm {
+    //     margin-bottom: 100px;
+    //   }
+    // }
 
-    .speak, .listen {
-      color:#BFBFBF;
+    .speak {
+      color:#FFF;
+      padding: 130px 0 100px;
       h1 {
         margin:100px 0px 50px 0px;
         color:#fff
@@ -147,14 +148,12 @@ $leftPadding: 15px;
       p {
         font-size:25px;
         line-height:30px;
+        padding-bottom:30px;
 
         >a {
           font-weight:200;
           color:#219FFF;
         }
-      }
-      hr {
-        width: 50%;
       }
     }
   }
