--- a/_includes/themes/minimalber/default.html
+++ b/_includes/themes/minimalber/default.html
@@ -71,12 +71,7 @@
       </div>
     </div>
 
-    <footer>
-      <p>Send me a letter: <a href="mailto:richard@burntfen.com">richard@burntfen.com</a></p>
-      <p>{{ site.author.name }} &copy; {{ site.time | date: '%Y' }}.
-        <a href="https://github.com/RichardLitt/richardlitt.github.com">Source</a>.
-      </p>
-    </footer>
+    {% include footer.html %}
 
     <!-- Le javascript
     ================================================== -->
