--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -203,8 +203,13 @@ a {
   }
 }
 
-.project-page-title {
-  margin-left: 15px;
+a.project-page-title {
+  h1 {
+    margin-left: 15px;
+  }
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 
@@ -261,4 +266,15 @@ img.art {
   // Used on the art.md page only
   width: 100%;
   margin: 100px 0px;
+}
+
+.btn-check-it-out {
+  border: 2px solid #000;
+  border-radius: 0px;
+  padding: 10px 20px;
+  margin-top: 30px;
+  &:hover {
+    color: red;
+    border-color: red;
+  }
 }
